k8s/week2-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: taskflow-backend
  namespace: happyotter-dev
  labels:
    app: taskflow
    component: backend
spec:
  to:
    kind: Service
    name: taskflow-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
